# LangGraph_Projects

./: .gitignore  Makefile  pyproject.toml  settings.py
agent/: graph.py  prompts.py  schemas.py
basics/first/: simple_graph.py
basics/first_simple_graph/: schemas.py  simple_graph.py
basics/forth_toolcall/: chatbot.py  schemas.py
basics/second/: conditional_edge.py
basics/second_conditional_graph/: conditional_edge.py  schemas.py
basics/third_chatbot/: loop.py  main.py  schemas.py
