[project]
name = "langgraph-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.36.0",
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langchain-groq>=1.0.1",
    "langgraph>=1.0.3",
    "mypy>=1.18.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.6",
]
